Actualiza diseño y animaciones de la seccion especialidades

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="inicio-container">
         <header>
-            <img src="images/logo.png" alt="Logo La Devesa" class="logo">
+            <img src="images/logo.jpeg" alt="Logo La Devesa" class="logo">
             <nav>
                 <ul>
                     <li><a href="#inicio">Inici</a></li>
@@ -62,15 +62,81 @@
             </div>
     </div>
 
+    <section id="especialitats">
+        <div class="especialitats-box">
+            <h2>ESPECIALITATS</h2>
+        </div>
+
+        <!-- Contenedor de las 3 cards -->
+        <div class="especialitats-container">
+            <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
+                <div class="circle selected"></div>
+                <h3>Quiropidia</h3>
+                <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més d'alteracions a
+                    les ungles dels peus.</p>
+            </div>
+            <div class="card" id="exploracio" onclick="showDescription('exploracio')">
+                <div class="circle"></div>
+                <h3>Exploració Biomecànica</h3>
+                <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
+                    seus moviments.</p>
+            </div>
+            <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
+                <div class="circle"></div>
+                <h3>Ortopodologia</h3>
+                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu durant
+                    la marxa.</p>
+            </div>
+        </div>
+
+        <!-- Card para mostrar la descripción de la especialitat seleccionada -->
+        <div class="description-card" id="descripcion-card">
+            <div id="quiropidia-description" class="description active">
+                <h4>Quiropidia</h4> <br>
+                <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i alteracions
+                    a les ungles
+                    dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres de més
+                    rellevància.</p>
+            </div>
+            <div id="exploracio-description" class="description">
+                <h4>Exploracio Biomecànica</h4> <br>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis fugit 
+                    fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint maxime dolor soluta cupiditate?.</p>
+            </div>
+            <div id="ortopodologia-description" class="description">
+                <h4>Ortopodologia</h4> <br>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a omnis velit neque veritatis, 
+                    totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus blanditiis explicabo rem.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="ortopedia">
+        <div class="ortopedia-box">
+            <h2>ORTOPEDIA</h2>
+        </div>
+    </section>
+
+    <section id="mutues">
+        <div class="mutues-box">
+            <h2>MUTUES</h2>
+        </div>
+    </section>
+
     <section id="contacte">
-        <h2>Contacte</h2>
+        <div class="contacte-box">
+            <h2>CONTACTE</h2>
+        </div>
         <p>Informació de contacte.</p>
     </section>
+
     </main>
 
     <footer>
         <p>&copy; 2024 Nom de la Clínica. Tots els drets reservats.</p>
     </footer>
-</body>
 
+    <script src="script.js"></script>
+
+</body>
 </html>
