Actualiza diseño de la seccion de descripcion de las  especialidades

--- a/index.html
+++ b/index.html
@@ -92,21 +92,39 @@
         <!-- Card para mostrar la descripción de la especialitat seleccionada -->
         <div class="description-card" id="descripcion-card">
             <div id="quiropidia-description" class="description active">
-                <h4>Quiropidia</h4> <br>
-                <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i alteracions
-                    a les ungles
-                    dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres de més
-                    rellevància.</p>
+                <div class="description-text">
+                    <h4>Quiropidia</h4> <br>
+                    <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
+                        alteracions
+                        a les ungles
+                        dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres de
+                        més
+                        rellevància.</p>
+                        <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
             </div>
             <div id="exploracio-description" class="description">
-                <h4>Exploracio Biomecànica</h4> <br>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis fugit 
-                    fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint maxime dolor soluta cupiditate?.</p>
+                <div class="description-text">
+                    <h4>Exploracio Biomecànica</h4> <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
+                        fugit
+                        fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
+                        maxime dolor soluta cupiditate?.</p>
+                        <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
             </div>
             <div id="ortopodologia-description" class="description">
-                <h4>Ortopodologia</h4> <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a omnis velit neque veritatis, 
-                    totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus blanditiis explicabo rem.</p>
+                <div class="description-text">
+                    <h4>Ortopodologia</h4> <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a omnis
+                        velit neque veritatis,
+                        totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
+                        blanditiis explicabo rem.</p>
+                        <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
             </div>
         </div>
     </section>
@@ -139,4 +157,5 @@
     <script src="script.js"></script>
 
 </body>
+
 </html>
