Mejora diseño responsive

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         <main>
             <section id="hero">
                 <h2>
-                    Els teus peus, la base del<br>
+                    Els teus peus, la base del
                     teu equilibri i benestar
                 </h2>
-                <p>Utilitzem tecnologia avançada i coneixements actualitzats per diagnosticar i tractar<br>
-                    els teus peus. Escollir-nos és optar per un enfocament integral que prioritza<br>
-                    la teva comoditat i ualitat de vida, q amb solucions efectives i personalitzades.<br>
+                <p>Utilitzem tecnologia avançada i coneixements actualitzats per diagnosticar i tractar
+                    els teus peus. Escollir-nos és optar per un enfocament integral que prioritza
+                    la teva comoditat i ualitat de vida, q amb solucions efectives i personalitzades.
                 </p>
 
                 <div class="contact-container">
@@ -66,72 +66,93 @@
         <div class="especialitats-box">
             <h2>ESPECIALITATS</h2>
         </div>
+        <div>
 
-        <!-- Contenedor de las 3 cards -->
-        <div class="especialitats-container">
-            <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
-                <div class="circle selected"></div>
-                <h3>Quiropidia</h3>
-                <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més d'alteracions a
-                    les ungles dels peus.</p>
+            <!-- Contenedor de las 3 cards -->
+            <div class="especialitats-container">
+                <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
+                    <div class="circle selected"></div>
+                    <h3>Quiropidia</h3>
+                    <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
+                        d'alteracions a
+                        les ungles dels peus.</p>
+                </div>
+                <div class="card" id="exploracio" onclick="showDescription('exploracio')">
+                    <div class="circle"></div>
+                    <h3>Exploració Biomecànica</h3>
+                    <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
+                        seus moviments.</p>
+                </div>
+                <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
+                    <div class="circle"></div>
+                    <h3>Ortopodologia</h3>
+                    <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
+                        durant
+                        la marxa.</p>
+                </div>
             </div>
-            <div class="card" id="exploracio" onclick="showDescription('exploracio')">
-                <div class="circle"></div>
-                <h3>Exploració Biomecànica</h3>
-                <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
-                    seus moviments.</p>
-            </div>
-            <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
-                <div class="circle"></div>
-                <h3>Ortopodologia</h3>
-                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu durant
-                    la marxa.</p>
-            </div>
-        </div>
 
-        <!-- Card para mostrar la descripción de la especialitat seleccionada -->
-        <div class="description-card" id="descripcion-card">
-            <div id="quiropidia-description" class="description active">
-                <div class="description-text">
-                    <h4>Quiropidia</h4> <br>
-                    <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
-                        alteracions
-                        a les ungles
-                        dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres de
-                        més
-                        rellevància.</p>
+            <!-- Card para mostrar la descripción de la especialitat seleccionada -->
+            <div class="description-card" id="descripcion-card">
+                <div id="quiropidia-description" class="description active">
+                    <div class="description-text">
+                        <h4>Quiropidia</h4> <br>
+                        <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
+                            alteracions
+                            a les ungles
+                            dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres
+                            de
+                            més
+                            rellevància.</p>
                         <button class="CTA">Contacta't amb nosaltres</button>
+                    </div>
+                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
-            </div>
-            <div id="exploracio-description" class="description">
-                <div class="description-text">
-                    <h4>Exploracio Biomecànica</h4> <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
-                        fugit
-                        fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
-                        maxime dolor soluta cupiditate?.</p>
+                <div id="exploracio-description" class="description">
+                    <div class="description-text">
+                        <h4>Exploracio Biomecànica</h4> <br>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
+                            fugit
+                            fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
+                            maxime dolor soluta cupiditate?.</p>
                         <button class="CTA">Contacta't amb nosaltres</button>
+                    </div>
+                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
-            </div>
-            <div id="ortopodologia-description" class="description">
-                <div class="description-text">
-                    <h4>Ortopodologia</h4> <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a omnis
-                        velit neque veritatis,
-                        totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
-                        blanditiis explicabo rem.</p>
+                <div id="ortopodologia-description" class="description">
+                    <div class="description-text">
+                        <h4>Ortopodologia</h4> <br>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
+                            omnis
+                            velit neque veritatis,
+                            totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
+                            blanditiis explicabo rem.</p>
                         <button class="CTA">Contacta't amb nosaltres</button>
+                    </div>
+                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
             </div>
-        </div>
     </section>
+
 
     <section id="ortopedia">
         <div class="ortopedia-box">
             <h2>ORTOPEDIA</h2>
+        </div>
+        <div class="ortopedia-content">
+            <div class="text-container">
+                <h2>Cuida el teu benestar amb les nostres solucions ortopèdiques a mida</h2>
+                <p class="description.active">
+                    Les nostres solucions ortopèdiques estan dissenyades per adaptar-se a les necessitats
+                    individuals de cada pacient, promovent el confort i benestar diari. Amb l'ús de
+                    materials d'alta qualitat i un procés personalitzat, assegurem que cada dispositiu
+                    compleixi amb els estàndards més alts d'eficàcia.
+                </p>
+            </div>
+            <div class="image-wrapper">
+                <img src="images/quiropidia.png" alt="Solucions Ortopèdiques" class="ortopedia-image">
+               <!--  <div class="image-background"></div>  -->
+            </div>
         </div>
     </section>
 
@@ -151,7 +172,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 Nom de la Clínica. Tots els drets reservats.</p>
+        <p>&copy; 2024 La Devesa. Tots els drets reservats.</p>
     </footer>
 
     <script src="script.js"></script>
