--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
         <div class="mutues-box">
             <h2>MUTUES</h2>
         </div>
+        <div class="mutues-content">
+            <p class="description.active">
+                Mütues sanitaries amb les quals treballem
+            </p>
+        </div>
     </section>
 
     <section id="contacte">
@@ -170,10 +175,38 @@
     </section>
 
     </main>
-
-    <footer>
-        <p>&copy; 2024 La Devesa. Tots els drets reservats.</p>
-    </footer>
+<footer>
+    <div class="footer-container">
+        <div class="footer-section" id="footer-service">
+            <h3>El nostre servei</h3>
+            <p>Trebalem per la cura del teu benestar amb solucions ortopèdiques personalitzades i d'alta qualitat. <br><br>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reprehenderit fuga porro beatae
+                laborum! Deserunt quisquam et dicta illo! Accusantium aspernatur neque quo, quaerat animi vero nostrum modi! Quae, dolore.
+            </p>
+        </div>
+        <div class="footer-section" id="footer-links">
+            <h3>Enllaços útils</h3>
+            <ul>
+                <li><a href="#">Enllaç 1</a></li>
+                <li><a href="#">Enllaç 2</a></li>
+                <li><a href="#">Enllaç 3</a></li>
+                <li><a href="#">Enllaç 4</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Direcció</h3>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1246.9374193772633!2d2.812279767314603!3d41.984526933956545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bae72202ba0515%3A0x8d32d6272a8902c0!2sCarrer%20Joaquim%20Vayreda%2C%2065%2C%2017001%20Girona%2C%20Spain!5e0!3m2!1sen!2sar!4v1729975340613!5m2!1sen!2sar"
+                width="350" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+            <p> 📍 Joaquin Vayreda, 65 - 17001 Giriona</p>
+            
+        </div>
+    </div>
+    <div class="footer-copy">
+        <p>&copy; All Rights Reserved</p>
+    </div>
+</footer>
 
     <script src="script.js"></script>
 
