--- a/index.html
+++ b/index.html
@@ -66,72 +66,71 @@
         <div class="especialitats-box">
             <h2>ESPECIALITATS</h2>
         </div>
-        <div>
 
-            <!-- Contenedor de las 3 cards -->
-            <div class="especialitats-container">
-                <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
-                    <div class="circle selected"></div>
-                    <h3>Quiropidia</h3>
-                    <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
-                        d'alteracions a
-                        les ungles dels peus.</p>
-                </div>
-                <div class="card" id="exploracio" onclick="showDescription('exploracio')">
-                    <div class="circle"></div>
-                    <h3>Exploració Biomecànica</h3>
-                    <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
-                        seus moviments.</p>
-                </div>
-                <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
-                    <div class="circle"></div>
-                    <h3>Ortopodologia</h3>
-                    <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
-                        durant
-                        la marxa.</p>
-                </div>
+        <!-- Contenedor de las 3 cards -->
+        <div class="especialitats-container">
+            <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
+                <div class="circle selected"></div>
+                <h3>Quiropidia</h3>
+                <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
+                    d'alteracions a
+                    les ungles dels peus.</p>
             </div>
+            <div class="card" id="exploracio" onclick="showDescription('exploracio')">
+                <div class="circle"></div>
+                <h3>Exploració Biomecànica</h3>
+                <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
+                    seus moviments.</p>
+            </div>
+            <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
+                <div class="circle"></div>
+                <h3>Ortopodologia</h3>
+                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
+                    durant
+                    la marxa.</p>
+            </div>
+        </div>
 
-            <!-- Card para mostrar la descripción de la especialitat seleccionada -->
-            <div class="description-card" id="descripcion-card">
-                <div id="quiropidia-description" class="description active">
-                    <div class="description-text">
-                        <h4>Quiropidia</h4> <br>
-                        <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
-                            alteracions
-                            a les ungles
-                            dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres
-                            de
-                            més
-                            rellevància.</p>
-                        <button class="CTA">Contacta't amb nosaltres</button>
-                    </div>
-                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
+        <!-- Card para mostrar la descripción de la especialitat seleccionada -->
+        <div class="description-card" id="descripcion-card">
+            <div id="quiropidia-description" class="description active">
+                <div class="description-text">
+                    <h4>Quiropidia</h4> <br>
+                    <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
+                        alteracions
+                        a les ungles
+                        dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres
+                        de
+                        més
+                        rellevància.</p>
+                    <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <div id="exploracio-description" class="description">
-                    <div class="description-text">
-                        <h4>Exploracio Biomecànica</h4> <br>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
-                            fugit
-                            fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
-                            maxime dolor soluta cupiditate?.</p>
-                        <button class="CTA">Contacta't amb nosaltres</button>
-                    </div>
-                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
-                </div>
-                <div id="ortopodologia-description" class="description">
-                    <div class="description-text">
-                        <h4>Ortopodologia</h4> <br>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
-                            omnis
-                            velit neque veritatis,
-                            totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
-                            blanditiis explicabo rem.</p>
-                        <button class="CTA">Contacta't amb nosaltres</button>
-                    </div>
-                    <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
-                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
             </div>
+            <div id="exploracio-description" class="description">
+                <div class="description-text">
+                    <h4>Exploracio Biomecànica</h4> <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
+                        fugit
+                        fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
+                        maxime dolor soluta cupiditate?.</p>
+                    <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+            </div>
+            <div id="ortopodologia-description" class="description">
+                <div class="description-text">
+                    <h4>Ortopodologia</h4> <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
+                        omnis
+                        velit neque veritatis,
+                        totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
+                        blanditiis explicabo rem.</p>
+                    <button class="CTA">Contacta't amb nosaltres</button>
+                </div>
+                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+            </div>
+        </div>
     </section>
 
 
@@ -151,7 +150,7 @@
             </div>
             <div class="image-wrapper">
                 <img src="images/quiropidia.png" alt="Solucions Ortopèdiques" class="ortopedia-image">
-               <!--  <div class="image-background"></div>  -->
+                <!--  <div class="image-background"></div>  -->
             </div>
         </div>
     </section>
@@ -175,38 +174,40 @@
     </section>
 
     </main>
-<footer>
-    <div class="footer-container">
-        <div class="footer-section" id="footer-service">
-            <h3>El nostre servei</h3>
-            <p>Trebalem per la cura del teu benestar amb solucions ortopèdiques personalitzades i d'alta qualitat. <br><br>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reprehenderit fuga porro beatae
-                laborum! Deserunt quisquam et dicta illo! Accusantium aspernatur neque quo, quaerat animi vero nostrum modi! Quae, dolore.
-            </p>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section" id="footer-service">
+                <h3>El nostre servei</h3>
+                <p>Trebalem per la cura del teu benestar amb solucions ortopèdiques personalitzades i d'alta qualitat.
+                    <br><br>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus reprehenderit fuga porro beatae
+                    laborum! Deserunt quisquam et dicta illo! Accusantium aspernatur neque quo, quaerat animi vero
+                    nostrum modi! Quae, dolore.
+                </p>
+            </div>
+            <div class="footer-section" id="footer-links">
+                <h3>Enllaços útils</h3>
+                <ul>
+                    <li><a href="#">Enllaç 1</a></li>
+                    <li><a href="#">Enllaç 2</a></li>
+                    <li><a href="#">Enllaç 3</a></li>
+                    <li><a href="#">Enllaç 4</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>Direcció</h3>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1246.9374193772633!2d2.812279767314603!3d41.984526933956545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bae72202ba0515%3A0x8d32d6272a8902c0!2sCarrer%20Joaquim%20Vayreda%2C%2065%2C%2017001%20Girona%2C%20Spain!5e0!3m2!1sen!2sar!4v1729975340613!5m2!1sen!2sar"
+                    width="350" height="150" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
+                <p> 📍 Joaquin Vayreda, 65 - 17001 Giriona</p>
+
+            </div>
         </div>
-        <div class="footer-section" id="footer-links">
-            <h3>Enllaços útils</h3>
-            <ul>
-                <li><a href="#">Enllaç 1</a></li>
-                <li><a href="#">Enllaç 2</a></li>
-                <li><a href="#">Enllaç 3</a></li>
-                <li><a href="#">Enllaç 4</a></li>
-            </ul>
+        <div class="footer-copy">
+            <p>&copy; All Rights Reserved</p>
         </div>
-        <div class="footer-section">
-            <h3>Direcció</h3>
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1246.9374193772633!2d2.812279767314603!3d41.984526933956545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12bae72202ba0515%3A0x8d32d6272a8902c0!2sCarrer%20Joaquim%20Vayreda%2C%2065%2C%2017001%20Girona%2C%20Spain!5e0!3m2!1sen!2sar!4v1729975340613!5m2!1sen!2sar"
-                width="350" height="150" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
-            <p> 📍 Joaquin Vayreda, 65 - 17001 Giriona</p>
-            
-        </div>
-    </div>
-    <div class="footer-copy">
-        <p>&copy; All Rights Reserved</p>
-    </div>
-</footer>
+    </footer>
 
     <script src="script.js"></script>
 
