--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
                     durant
                     la marxa.</p>
             </div>
-            
+
         </div>
 
         <!-- Card para mostrar la descripción de la especialitat seleccionada -->
-        <div class="description-card" id="descripcion-card">
+        <div class="description-card left" id="descripcion-card">
             <div id="quiropidia-description" class="description active">
                 <div class="description-text">
                     <h4>Quiropidia</h4> <br>
