Fija header, mejora diseño del slider de cards

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img src="images/logo.jpeg" alt="Logo La Devesa" class="logo">
             <nav>
                 <ul>
-                    <li><a href="#inicio">Inici</a></li>
+                    <li><a href="#hero">Inici</a></li>
                     <li><a href="#especialitats">Especialitats</a></li>
                     <li><a href="#ortopedia">Ortopèdia</a></li>
                     <li><a href="#mutues">Mutues</a></li>
