--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </p>
 
                 <div class="contact-container">
-                    <button class="CTA">Contacta't amb nosaltres</button>
+                    <button class="CTA">Contacte amb nosaltres</button>
                     <div class="phone-box">
                         <img src="images/telefon.png" alt="Teléfon" class="phone-icon">
                     </div>
@@ -52,13 +52,16 @@
                 <img src="images/profile.png" alt="Foto de Beth Samitier" class="profile-image">
                 <div class="profile-info">
                     <h3 class="profile-name">Beth Samitier i Rubió</h3>
-                    <p class="profile-job">Podòloga i Tècnica en Ortopèdia</p>
+                    <p class="profile-job">
+                        <span class="violet">Podòloga i Tecnica en Ortopedia  | </span>
+                        <span class="orange">N° COL·LEGIADA 1185</span>
+                    </p>
                     <p class="profile-description">Tractament de podologia de primera qualitat realitzat<br>
                         per experts de camp, molt recomanable per a tothom.</p>
                 </div>
-                <a href="https://www.linkedin.com/in/tu-perfil" target="_blank" class="linkedin-icon">
+<!--                 <a href="https://www.linkedin.com/in/tu-perfil" target="_blank" class="linkedin-icon">
                     <img src="images/linkedin.svg" alt="LinkedIn" class="linkedin-img">
-                </a>
+                </a> -->
             </div>
     </div>
 
@@ -73,40 +76,48 @@
         <!-- Contenedor de las 3 cards -->
         <div class="especialitats-container">
             <div class="card active" id="quiropidia" onclick="showDescription('quiropidia')">
-                <div class="circle selected"></div>
+                <div class="circle">
+                    <img src="images/quiropodia-icon.png" alt="quiropodia" class="circle-icon">
+                </div>
                 <h3>Quiropidia</h3>
                 <p>És un tractament podològic que es realitza per eliminar dureses i callositats, a més
                     d'alteracions a
                     les ungles dels peus.</p>
             </div>
             <div class="card" id="exploracio" onclick="showDescription('exploracio')">
-                <div class="circle"></div>
+                <div class="circle">
+                    <img src="images/exploracio-icon.png" alt="exploracio" class="circle-icon">
+                </div>
                 <h3>Exploració Biomecànica</h3>
                 <p>Consisteix en una valoració del pacient, de la seva postura tant tumbat, assegut o de peu, i dels
                     seus moviments.</p>
             </div>
             <div class="card" id="ortopodologia" onclick="showDescription('ortopodologia')">
-                <div class="circle"></div>
+                <div class="circle">
+                    <img src="images/ortopodologia-icon.png" alt="ortopodologia" class="circle-icon">
+                </div>
                 <h3>Ortopodologia</h3>
                 <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
                     durant
                     la marxa.</p>
             </div>
             
-            <div class="card" id="test1" onclick="showDescription('ortopodologia')">
-                <div class="circle"></div>
-                <h3>test1</h3>
-                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
-                    durant
-                    la marxa.</p>
+            <div class="card" id="Podología" onclick="showDescription('Podología')">
+                <div class="circle">
+                    <img src="images/podologia-icon.png" alt="Podología" class="circle-icon">
+                </div>
+                <h3>Podología</h3>
+                <p>És una branca de la medicina que té per objecte l'estudi, diagnòstic i tractament de les 
+                    malalties i alteracions que afecten el peu.</p>
             </div>
 
-            <div class="card" id="test2" onclick="showDescription('ortopodologia')">
-                <div class="circle"></div>
-                <h3>test2</h3>
-                <p>Es basa en el tractament d'aquelles alteracions que influeixen en la funció correcta del peu
-                    durant
-                    la marxa.</p>
+            <div class="card" id="piediabetico" onclick="showDescription('piediabetico')">
+                <div class="circle">
+                    <img src="images/piediabetico-icon.png" alt="piediabetico" class="circle-icon">
+                </div>
+                <h3>Peu Diabétic</h3>
+                <p>És una complicació de la diabetis que es caracteritza per la infecció, ulceració o destrucció 
+                    dels teixits del peu.</p>
             </div>
 
         </div>
@@ -116,13 +127,9 @@
             <div id="quiropidia-description" class="description active">
                 <div class="description-text">
                     <h4>Quiropidia</h4> <br>
-                    <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i
-                        alteracions
-                        a les ungles
-                        dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en altres
-                        de
-                        més
-                        rellevància.</p>
+                    <p>La quiropòdia és un tractament podològic que consisteix en l'eliminació de callositats i alteracions 
+                        a les ungles dels peus amb l'objectiu d'evitar que aquestes lesions lleus s'agreugin i derivin en 
+                        altres de més rellevància.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
                 <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image active">
@@ -130,29 +137,26 @@
             <div id="exploracio-description" class="description">
                 <div class="description-text">
                     <h4>Exploracio Biomecànica</h4> <br>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloribus id temporibus nobis
-                        fugit
-                        fugiat sed, consequuntur numquam qui! Animi impedit assumenda recusandae possimus vitae sint
-                        maxime dolor soluta cupiditate?.</p>
+                    <p>És un examen/estudi podològic que avalua la forma en què el cos es mou i com això afecta 
+                        l'estructura i la funció del cos. En el cas dels peus, una exploració biomecànica inclou una 
+                        anàlisi detallada de la petjada i la manera com el teu cos s'ajusta a la superfície on camines.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+                <img src="images/quiropidia.png" alt="Descripción Exploracio Biomecànica" class="description-image">
             </div>
             <div id="ortopodologia-description" class="description">
                 <div class="description-text">
                     <h4>Ortopodologia</h4> <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
-                        omnis
-                        velit neque veritatis,
-                        totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
-                        blanditiis explicabo rem.</p>
+                    <p>L'ortopodologia es basa en el tractament de les alteracions mecàniques del peu, és a dir, de les 
+                        alteracions que influeixen en la funció correcta del peu durant la marxa. El tractament d’aquestes 
+                        alteracions és mitjançant:</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+                <img src="images/plantillas-ortopedicas.png" alt="Descripción ortopodologia" class="description-image">
             </div>
-            <div id="test1-description" class="description">
+            <div id="Podología-description" class="description">
                 <div class="description-text">
-                    <h4>test1</h4> <br>
+                    <h4>Podología</h4> <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
                         omnis
                         velit neque veritatis,
@@ -160,19 +164,20 @@
                         blanditiis explicabo rem.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+                <img src="images/podologia.png" alt="Descripción Podología" class="description-image">
             </div>
-            <div id="test2-description" class="description">
+            <div id="piediabetico-description" class="description">
                 <div class="description-text">
-                    <h4>test2</h4> <br>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum deleniti molestiae quidem a
-                        omnis
-                        velit neque veritatis,
-                        totam provident odio quam ut molestias voluptatem! Laboriosam obcaecati necessitatibus
-                        blanditiis explicabo rem.</p>
+                    <h4>Peu Diabétic</h4> <br>
+                    <p>El peu diabètic o síndrome del peu diabètic fa referència a la presència d'infecció, ulceració o 
+                        destrucció dels teixits del peu associada a neuropatia perifèrica i/o malaltia arterial perifèrica de 
+                        les extremitats inferiors de les persones amb diabetis mellitus. 
+                        <br>
+                        <br>
+                        Cura del peu diabètic i tractament preventiu d’úlceres vasculars i neuropàtiques.</p>
                     <button class="CTA">Contacta't amb nosaltres</button>
                 </div>
-                <img src="images/quiropidia.png" alt="Descripción Quiropidia" class="description-image">
+                <img src="images/piediabetico.png" alt="Descripción pie diabetico" class="description-image">
             </div>
 
         </div>
@@ -194,7 +199,7 @@
                 </p>
             </div>
             <div class="image-wrapper">
-                <img src="images/quiropidia.png" alt="Solucions Ortopèdiques" class="ortopedia-image">
+                <img src="images/ortopedia.png" alt="Solucions Ortopèdiques" class="ortopedia-image">
                 <!--  <div class="image-background"></div>  -->
             </div>
         </div>
@@ -208,6 +213,17 @@
             <p class="description.active">
                 Mütues sanitaries amb les quals treballem
             </p>
+            <div class="mutues-logos">
+                <img src="mutues/mgcmutua.png" alt="Logo MGC mutua" class="mutue-logo">
+                <img src="mutues/sanitas.png" alt="Logo Sanitas" class="mutue-logo">
+                <img src="mutues/cigna.png" alt="Logo Cigna" class="mutue-logo">
+                <img src="mutues/aegon.png" alt="Logo Aegon" class="mutue-logo">
+                <img src="mutues/dkv.png" alt="Logo DKV seguros medicos" class="mutue-logo">
+                <img src="mutues/allianz.png" alt="Logo Allianz" class="mutue-logo">
+                <img src="mutues/mapfre.png" alt="Logo Mapfre" class="mutue-logo">
+                <img src="mutues/vivaz.png" alt="Logo Vivaz" class="mutue-logo">
+                <img src="mutues/mutuacat.png" alt="Logo Mutuacat" class="mutue-logo">
+            </div>
         </div>
     </section>
 
